# fedcloud-catchall-operations

./: .dockerignore  .gitignore  .travis.yaml  .travis.yml  .trivyignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  build.sh  chartpress.sh  chartpress.yaml  deploy.sh  generate-config.py  inventory.yaml  inventory.yaml.sample  playbook.yaml  publisher.sh  pyproject.toml  requirements.txt  schema.json  sites.yaml  test-sites.yaml  validate.sh  vo-mappings.yaml
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  dependabot.yml
.github/linters/: .codespellrc  .dockerfilelintrc  .jscpd.json
.github/workflows/: check-links.yml  cloud-info-deploy.yml  deploy-cloud-info.yml  deploy-image-sync.yml  deploy.yml  docker.yml  image-sync-deploy.yml  lint.yml  molecule.yml  python.yml  superlinter.yml  tests.yaml  validate.yaml
atrope/: Dockerfile  pyproject.toml  requirements.txt  sync.py
atrope/atrope_sync/: sync.py
caso/: Dockerfile  voms.json
catchall/: Dockerfile  README.md  publisher.sh  pyproject.toml
catchall/src/catchall/: __init__.py  config.py  discovery.py  image_sync.py  test_token_generator.py  token_generator.py
cloud-info/: Dockerfile  README.md  ams-wrapper.sh  cloud-info-wrapper.sh  config_generator  config_generator.py  openstack.rc  openstack.yaml  publisher.sh  pyproject.toml  requirements.txt
cloud-info/cloud_info_catchall/: config_generator.py  share_discovery.py  test.py  test_config_generator.py  test_share_discovery.py  test_token_generator.py  token_generator.py
cloud-info/deploy/: NCG-INGRID-PT.tfvars
cloud-info/deploy/roles/catchall/tasks/: cloud-info.yml
cloud-info/src/cloud_info_catchall/: share_discovery.py  test_token_generator.py
cloudkeeper-core/: Dockerfile  cloudkeeper.yml  entrypoint.sh
cloudkeeper-os/: Dockerfile  cloudkeeper.repo  openstack_client.py
deploy/: CESNET-MCC.tfvars  IISAS-FedCloud.tfvars  NCG-INGRID-PT.tfvars  README.md  backend.tf  cloud-init.yaml  clouds.yaml  deploy.sh  extra-vars.yaml  galaxy-requirements.yaml  main.tf  playbook.yaml  site-config.sh  versions.tf  vos.yaml
deploy/cloud-info/: CESNET-MCC.tfvars  backend.tf  main.tf
deploy/image-sync/: IISAS-FedCloud.tfvars  NCG-INGRID-PT.tfvars  backend.tf  extra-cloud-init.yaml  main.tf  vars.tf
deploy/roles/catchall/: requirements.txt
deploy/roles/catchall/defaults/: main.yaml
deploy/roles/catchall/handlers/: main.yml
deploy/roles/catchall/molecule/default/: converge.yml  create.yml  molecule.yml  (+1 more)
deploy/roles/catchall/tasks/: accounting.yml  cloud-info.yml  docker.yml  main.yml  sync.yml  vo-config.yml
deploy/roles/catchall/templates/: catchall.conf.j2  cloud-info.env.j2  site-config.yaml.j2  site-info.yaml.j2  sync.conf.j2
deploy/roles/catchall/vars/: main.yml
doc/architecture/decisions/: 0001-record-architecture-decisions.md  0002-json-rendering.md  0003-image-synching.md  0003-image-syncing.md
fedcloud-ops/: Chart.yaml  values.yaml
fedcloud-ops/templates/: NOTES.txt  _helpers.tpl  ams-secret.yaml  cloud-info-provider-cronjob.yaml
fedcloud-ops/templates/cloud-info/: config.yaml  cronjob.yaml  oidc-secret.yaml
fedcloud-ops/templates/cloudkeeper/: cloudkeeper-secret.yaml  cronjob.yaml  deployment.yaml  oidc-secret.yaml  svc.yaml
image-sync/: Dockerfile  pyproject.toml  requirements.txt
image-sync/deploy/: .main.tf.swp  cloud-init.yaml  clouds.yaml  deploy.sh  main.tf  playbook.yaml
image-sync/deploy/roles/catchall/defaults/: main.yaml
image-sync/deploy/roles/catchall/tasks/: main.yml  sync.yml
image-sync/deploy/roles/catchall/templates/: sync.conf.j2
image-sync/image_sync/: sync.py
roles/fedcloud-catchall-ops/defaults/: .main.yaml.swp  main.yaml
roles/fedcloud-catchall-ops/tasks/: cloud-info.yaml  docker.yaml  main.yaml  vo-config.yaml
roles/fedcloud-catchall-ops/templates/: cloud-info.env.j2  site-info.yaml.j2
sites/: 100IT.yaml  BIFI.yaml  CENI.yaml  CESGA-CLOUD.yaml  CESGA.yaml  CESNET-MCC.yaml  CESNET-MCCG2.yaml  CETA-GRID.yaml  CLOUD-INFN-CATANIA.yaml  CLOUDIFIN.yaml  CREODIAS.yaml  CSTCLOUD-EGI.yaml  CYFRONET-CLOUD.yaml  DESY-CC.yaml  DESY-HH.yaml  ELKH-CLOUD.yaml  EODC.yaml  GRNET-OPENSTACK.yaml  GSI-LCG2.yaml  IFCA-LCG2.yaml  IISAS-FedCloud-cloud.yaml  IISAS-FedCloud-nova.yaml  IISAS-FedCloud.yaml  IISAS-GPUCloud.yaml  ILIFU-UCT.yaml  IN2P3-IRES.yaml  INFN-CATANIA-STACK.yaml  INFN-CLOUD-BARI.yaml  INFN-CLOUD-CNAF  INFN-CLOUD-CNAF.yaml  INFN-PADOVA-STACK.yaml  ITIM-Cloud.yaml  Kharkov-KIPT-LCG2.yaml  NCG-INGRID-PT.yaml  RECAS-BARI.yaml  SCAI.yaml  TR-FC1-ULAKBIM.yaml  UA-BITP.yaml  UNIV-LILLE.yaml  UPV-GRyCAP.yaml  (+3 more)
src/fedcloud_catchall/: accounting.py  cloud_info_config.py  config.py  discovery.py  image_sync.py  record_cleaner.py  test_accounting.py  test_cloud_info_config.py  test_discovery.py  test_image_sync.py  test_token_generator.py  token_generator.py
terraform/: backend.tf  cloud-init.yaml  clouds.yaml  main.tf
(+2 files in other folders)
